Footer Contents Updated
Fixed footer typo

--- a/public/project2.html
+++ b/public/project2.html
@@ -31,7 +31,7 @@
             <form action="javascript: submit()">
                 <input type="text" placeholder="Search... (Spider-Man, Batman, Hulk, etc)" name="search" id="characterName">
             </form>
-            
+
 
             <button type="button" onclick="submit()"><i class="fa fa-search"></i></button>
             <div id="errorText">
@@ -114,7 +114,7 @@
         <div class="footerData">
             <p>Esteban Bermudez 2021</p>
             <p>CSC 130 Project 2</p>
-            <p>Powered by Super Hero Data Base Api</p>
+            <p>Powered by Super Hero Database Api</p>
         </div>
 
 
